--- a/style.css
+++ b/style.css
@@ -17,12 +17,12 @@ html {
 }
 
 header {
-    margin: 0 4rem;
+    margin: 2rem;
     letter-spacing: 0.8rem;
     text-align: center;
-    border-bottom: 1px solid #Dff6FF;
-    border-right: 1px solid #Dff6FF; 
-    border-left: 1px solid #Dff6FF;
+    border-bottom: 2px solid #Dff6FF;
+    border-right: 2px solid #Dff6FF; 
+    border-left: 2px solid #Dff6FF;
     padding: 0.5rem;
     box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.4);
     text-transform: uppercase;
@@ -49,14 +49,16 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 7rem 4rem;
+    margin: 6rem 3rem;
+    transition: all 1s;
 }
 
 .imageCard img {
     width: 100%;
     height: auto;
     border-radius: 30px;
-    box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 28px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 28px 0 rgba(0, 0,0,0.19);
+    /* filter: drop shadow(.1em .3em ,3em #40514e); */ 
 } 
 
 
@@ -72,14 +74,13 @@ p {
 */
 
 .cardText {
-    color:  #47B5FF;
+    color: #47B5FF;
     background: transparent;
     text-align: center;
-    font-size: 1.8rem;
     padding: 1rem 2rem;
     border-radius: 30px;
     margin-top: 1rem; 
-    box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 28px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 28px 0 rgba(0,0,0,0.19);
 }
 
 @media (min-width: 768px){
@@ -90,7 +91,7 @@ p {
       flex-wrap: wrap;
 } 
 
-.imagecard{
+.imagecard {
     max-width: 28%;
     }
 }
